--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,7 @@ h1 {
     margin-top: 20px;
     background-color: transparent;
   }
-  /* form {
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    font-size: larger;
-  } */
+ 
 
   .epic-transit-form {
     display: flex;
@@ -36,29 +28,10 @@ h1 {
     border: none;
     cursor: pointer;
   }
-  /* .header {
-    width: 100%;
-  } */
-
-  /* .header-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  /* .header {
-    width: 100%;
-    height: 200px; Adjust the height as needed */ */
   
-
-  /* .header-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  } */
-
-
   .header {
     width: 100%;
+    height: 100%;
   }
 
   .header img {
@@ -76,6 +49,16 @@ h1 {
     width: 30%;
     margin-right: 10px;
   }
+  .copyright{
+    background-color: #007bff;
+    text-align: center;
+  }
+  .about{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  
   
   
   
