--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ h1 {
     text-align: center;
     margin-top: 20px;
     background-color: transparent;
+    font-weight: 700;
+    font-style: oblique;
   }
  
 
@@ -31,12 +33,12 @@ h1 {
   
   .header {
     width: 100%;
-    height: 100%;
+    
   }
 
   .header img {
     width: 100%;
-    object-fit: cover;
+    height: 300px;
   }
 
   .imageContainer {
