--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@ h1 {
     margin: 5px;
     padding: 8px;
     background-color: #007bff;
+    margin-left: -8px;
+    margin-right: -9px;
   }
   
   .navbar-item {
@@ -103,19 +105,20 @@ h1 {
   }
   
   .social-icons a {
-    color: #333;
+    color: #161313;
     margin-right: 10px;
     font-size: 59px;
     transition: color 0.3s ease-in-out;
   }
   
   .social-icons a:hover {
-    color: #007bff;
+    color: #000000;
   }
 
 .head {
   width: 100%;
   margin-bottom: 20px;
+  margin-left: -8px;
 }
 
 .head img {
@@ -140,6 +143,8 @@ h1 {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  margin-left: -8px;
+  margin-right: -25px;
 }
 
 .imagecont img {
@@ -153,6 +158,7 @@ h1 {
   margin: 0 auto;
   margin-top: 60px;
   margin-bottom: 60px;
+  margin-left: 0px;
 }
 
 .form form {
@@ -199,5 +205,8 @@ h1 {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
-  margin-bottom: 20px;
+  margin-bottom: -9px;
+  background-color: #929ca7;
+  margin-left: -8px;
+  margin-right: -8px;
 }
