--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,28 @@ h1 {
   
   .header {
     width: 100%;
+     
     
   }
 
   .header img {
     width: 100%;
     height: 300px;
+    /* .header {
+        position: relative;
+      } */
+      
+      .text-overlay {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.7);
+        padding: 10px;
+        color: white;
+        font-size: 24px;
+      }
   }
 
   .imageContainer {
@@ -56,14 +72,11 @@ h1 {
     background-color: #007bff;
     text-align: center;
   }
-  /* .about{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px; */
-  /* } */
+ 
   .about {
     display: flex;
     justify-content: space-between;
+    background-color: #648fbd;
   }
   
   .about > * {
@@ -89,6 +102,64 @@ h1 {
   .social-icons a:hover {
     color: #007bff;
   }
+
+  .navbar-list {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+    padding: 8px;
+    background-color: #007bff;
+  }
+  
+  .navbar-item {
+    margin: 0 10px;
+  }
+  
+  .navbar-link {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 10px;
+  }
+  
+  .navbar-link:hover {
+    background-color: #007bff;
+  }
+  .form p {
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #fff;
+    background-color: #007bff;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  .form label {
+    margin-bottom: 5px;
+  }
+  
+  .form input[type="text"],
+  .form input[type="date"] {
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .form button {
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .form button:hover {
+    background-color: #0056b3;
+  }
+
  
   
   
