--- a/src/App.css
+++ b/src/App.css
@@ -412,3 +412,71 @@ font-size: larger;
     margin-top:0px;
      
   }
+  .details {
+    text-align: center;
+  }
+  
+  .details h2 {
+    margin-bottom: 20px;
+  }
+  
+  .details p {
+    margin-bottom: 10px;
+  }
+  
+  .details h3 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .details label {
+    display: block;
+    font-weight: 300;
+  }
+  
+  .details input[type="radio"] {
+    margin-right: 5px;
+  }
+  
+  .details button {
+    display: inline-block;
+    margin-top: 5%;
+    margin-right: 30px;
+    padding: 15px 15px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  
+  }
+  
+  .details button:hover {
+    background-color: #0056b3;
+  }
+  .details .button-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+
+  .button-container{
+    font-size: larger;
+    font-weight: 500;
+  }
+  .confirmation{
+    font-weight: 400;
+    color: #007bff;
+    text-align: center;
+    
+  }
+ 
+  .confirmation h1 {
+    margin-bottom: 20px;
+  }
+  
+  .confirmation .icon {
+    display: block;
+    margin-top: 10px;
+    text-align: center;
+  }
