--- a/src/App.css
+++ b/src/App.css
@@ -480,3 +480,36 @@ font-size: larger;
     margin-top: 10px;
     text-align: center;
   }
+  .bus-card{
+    align-content: center;
+  }
+
+  .center-content {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 10vh;
+  }
+  
+  .bus-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .bus-card h3,
+  .bus-card p {
+    margin-right: 20px;
+  }
+ 
+  
+  
+  
+  
+  
+  
+  
